--- a/.github/workflows/Build_OP_x86_64_LXC.yml
+++ b/.github/workflows/Build_OP_x86_64_LXC.yml
@@ -5,7 +5,7 @@
 # Youtube Channel: https://goo.gl/fvkdwm 
 #=================================================
 
-name: Build_x86_64
+name: Build_x86_64_lxc
 
 # Add a button to trigger the workflow
 on: 
@@ -76,7 +76,7 @@ jobs:
     #  run: |
     #    git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon-jerrykuku
 
-    - name: Configuration Customization - Build_x86_64
+    - name: Configuration Customization - Build_x86_64_lxc
       env:
         CONFIG_FILE: 'x86_64-lxc.conf'
       run: |
