--- a/x86_64-lxc.conf
+++ b/x86_64-lxc.conf
@@ -19,6 +19,7 @@ CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_iperf3=y
 
 # dnsmasq
+CONFIG_PACKAGE_dnsmasq=n
 CONFIG_PACKAGE_dnsmasq_full=y
 CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_conntrack=y
