--- a/x86_64-lxc.conf
+++ b/x86_64-lxc.conf
@@ -12,11 +12,27 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=300
 # tools
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_qosify=y
-CONFIG_PACKAGE_tc-full=y
-CONFIG_PACKAGE_tc-mod-iptables=y
 CONFIG_PACKAGE_zlib=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_iperf3=y
+
+### 22.03 firewall ###
+# CONFIG_PACKAGE_firewall is not set
+CONFIG_PACKAGE_firewall4=y
+CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_DEFAULT_kmod-nft-offload=y
+# CONFIG_PACKAGE_arptables-legacy is not set
+CONFIG_PACKAGE_arptables-nft=y
+# CONFIG_PACKAGE_ebtables-legacy is not set
+CONFIG_PACKAGE_ebtables-nft=y
+# CONFIG_PACKAGE_ip6tables-legacy is not set
+CONFIG_PACKAGE_ip6tables-mod-fullconenat=y
+CONFIG_PACKAGE_ip6tables-nft=y
+# CONFIG_PACKAGE_iptables-legacy is not set
+CONFIG_PACKAGE_iptables-nft=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
+# CONFIG_PACKAGE_miniupnpd-iptables is not set
+CONFIG_PACKAGE_miniupnpd-nftables=y
 
 # dnsmasq
 CONFIG_PACKAGE_dnsmasq=n
@@ -35,38 +51,39 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 
 # luci
+CONFIG_LUCI_LANG_zh_Hans=y
+CONFIG_LUCI_LANG_en=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 
+# luci app
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-
-CONFIG_PACKAGE_luci-app-webadmin=y
-CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
-CONFIG_PACKAGE_luci-mod-admin-full=y
-CONFIG_PACKAGE_luci-mod-network=y
-CONFIG_PACKAGE_luci-mod-status=y
-CONFIG_PACKAGE_luci-mod-system=y
+#CONFIG_PACKAGE_luci-app-webadmin=y
+#CONFIG_PACKAGE_luci-mod-admin-full=y
+#CONFIG_PACKAGE_luci-mod-network=y
+#CONFIG_PACKAGE_luci-mod-status=y
+#CONFIG_PACKAGE_luci-mod-system=y
 
 # ppp
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 
-# mwan3
+# traffic controll & mwan3
+CONFIG_PACKAGE_tc-full=y
+CONFIG_PACKAGE_tc-mod-iptables=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
-CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
 
 # ddns
-CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+CONFIG_PACKAGE_ddns-scripts_aliyun=y
+CONFIG_PACKAGE_bind-host=y
 
 # upnp
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
