--- a/x86_64-Passwall.conf
+++ b/x86_64-Passwall.conf
@@ -147,7 +147,7 @@ CONFIG_LIBCURL_OPENSSL=y
 # CONFIG_LIBCURL_GNUTLS is not set
 # CONFIG_LIBCURL_NOSSL is not set
 
-# ssrplus
+# passwall
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=n
 CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y
