--- a/x86_64-Passwall.conf
+++ b/x86_64-Passwall.conf
@@ -19,7 +19,7 @@ CONFIG_IMAGEOPT=y
 CONFIG_KERNEL_BUILD_DOMAIN="buildhost"
 CONFIG_KERNEL_BUILD_USER="builder"
 # CONFIG_KERNEL_KALLSYMS is not set
-CONFIG_MAKE_TOOLCHAIN=y
+#      CONFIG_MAKE_TOOLCHAIN=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_libbpf=m
 CONFIG_PACKAGE_libelf=m
