--- a/x86_64-Passwall.conf
+++ b/x86_64-Passwall.conf
@@ -1,25 +1,30 @@
 # https://downloads.openwrt.org/releases/23.05.0/targets/x86/64/config.buildinfo
+
+# image
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
-#      CONFIG_TARGET_MULTI_PROFILE=y
+CONFIG_TARGET_x86_64_Generic=y
 CONFIG_TARGET_DEVICE_x86_64_DEVICE_generic=y
 CONFIG_TARGET_DEVICE_PACKAGES_x86_64_DEVICE_generic=""
-#      CONFIG_ALL_KMODS=y
-#      CONFIG_ALL_NONSHARED=y
-CONFIG_DEVEL=y
-CONFIG_TARGET_PER_DEVICE_ROOTFS=y
-CONFIG_AUTOREMOVE=y
-CONFIG_BPF_TOOLCHAIN_BUILD_LLVM=y
-# CONFIG_BPF_TOOLCHAIN_NONE is not set
-#      CONFIG_BUILDBOT=y
-CONFIG_COLLECT_KERNEL_DEBUG=y
-CONFIG_HAS_BPF_TOOLCHAIN=y
-#      CONFIG_IB=y
-CONFIG_IMAGEOPT=y
-CONFIG_KERNEL_BUILD_DOMAIN="buildhost"
-CONFIG_KERNEL_BUILD_USER="builder"
-# CONFIG_KERNEL_KALLSYMS is not set
-#      CONFIG_MAKE_TOOLCHAIN=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
+CONFIG_TARGET_KERNEL_PARTSIZE=16
+CONFIG_TARGET_ROOTFS_PARTSIZE=300
+
+CONFIG_VERSIONOPT=y
+CONFIG_VERSION_BUG_URL=""
+CONFIG_VERSION_CODE=""
+CONFIG_VERSION_DIST="OpenWrt"
+CONFIG_VERSION_FILENAMES=y
+CONFIG_VERSION_HOME_URL=""
+CONFIG_VERSION_HWREV=""
+CONFIG_VERSION_MANUFACTURER=""
+CONFIG_VERSION_MANUFACTURER_URL=""
+CONFIG_VERSION_NUMBER=""
+CONFIG_VERSION_PRODUCT=""
+CONFIG_VERSION_REPO="https://downloads.openwrt.org/releases/23.05.0"
+CONFIG_VERSION_SUPPORT_URL=""
+
+# default packages
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_libbpf=m
 CONFIG_PACKAGE_libelf=m
@@ -59,36 +64,9 @@ CONFIG_PACKAGE_xdp-filter=m
 CONFIG_PACKAGE_xdp-loader=m
 CONFIG_PACKAGE_xdpdump=m
 CONFIG_PACKAGE_zlib=m
-CONFIG_REPRODUCIBLE_DEBUG_INFO=y
-#      CONFIG_SDK=y
-CONFIG_SDK_LLVM_BPF=y
-#      CONFIG_TARGET_ALL_PROFILES=y
-CONFIG_USE_LLVM_BUILD=y
-CONFIG_VERSIONOPT=y
-CONFIG_VERSION_BUG_URL=""
-CONFIG_VERSION_CODE=""
-CONFIG_VERSION_DIST="OpenWrt"
-CONFIG_VERSION_FILENAMES=y
-CONFIG_VERSION_HOME_URL=""
-CONFIG_VERSION_HWREV=""
-CONFIG_VERSION_MANUFACTURER=""
-CONFIG_VERSION_MANUFACTURER_URL=""
-CONFIG_VERSION_NUMBER=""
-CONFIG_VERSION_PRODUCT=""
-CONFIG_VERSION_REPO="https://downloads.openwrt.org/releases/23.05.0"
-CONFIG_VERSION_SUPPORT_URL=""
-
-
-# image
-CONFIG_TARGET_x86_64_Generic=y
-CONFIG_TARGET_ROOTFS_TARGZ=y
-CONFIG_TARGET_KERNEL_PARTSIZE=16
-CONFIG_TARGET_ROOTFS_PARTSIZE=300
 
 # tools
 CONFIG_PACKAGE_lua=y
-CONFIG_PACKAGE_qosify=y
-CONFIG_PACKAGE_zlib=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_iperf3=y
 
