--- a/.github/workflows/Build_OP_x86_64_Passwall.yml
+++ b/.github/workflows/Build_OP_x86_64_Passwall.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Clone source code
       env: 
         REPO_URL: https://github.com/openwrt/openwrt.git
-        REPO_BRANCH: openwrt-23.05
+        REPO_BRANCH: v23.05.0
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
